--- a/backend/chat/templates/chat/groupchat.html
+++ b/backend/chat/templates/chat/groupchat.html
@@ -1,4 +1,4 @@
-{% extends 'chat/base.html'%} 
+{% extends 'chat/base.html'%}
 {% block title%} Chat Room{%endblock title%}
 {% block content%}
 <textarea id="chat-log" cols="100" rows="20"></textarea><br>
@@ -7,10 +7,9 @@
 
 <script>
     document.querySelector('#chat-log').value = ""
-    {% for message_event in message_and_event_list%}
- 
-   document.querySelector('#chat-log').value += ( {{message_event}}  + '\n');
-    {%endfor%}
+    {% for message_event in message_and_event_list %}
+    document.querySelector('#chat-log').value += ( {{message_event}}  + '\n');
+    {% endfor %}
 </script>
 
 
@@ -18,6 +17,59 @@
 <ul id="members">
 {% for member in group_members%}
 <li id="members-{{member.username}}">{{member}}</li>
-{%endfor%}
+{% endfor %}
 </ul>
-{%endblock content%}
+{% endblock content %}
+{% block script %}
+    <script>
+        base_url = `${window.location.host}${window.location.pathname}`
+        const chatSocket = new WebSocket(`ws://${base_url}`);
+
+
+        chatSocket.onopen = function (e) {
+            console.log("connexted")
+        }
+        chatSocket.onmessage = function (e) {
+            const data = JSON.parse(e.data);
+            console.log(data)
+            document.querySelector('#chat-log').value += (data.message + '\n');
+            status = data.status
+            user = data.user
+
+            if (status == "Left") {
+
+                document.getElementById(`members-${user}`).remove()
+            } else if (status == "Join") {
+                var members_list = document.getElementById('members')
+                var members_item = document.createElement("li")
+                members_item.innerHTML = user
+                members_item.setAttribute("id", `members-${user}`)
+
+                console.log(members_item)
+                members_list.appendChild(members_item)
+            }
+        };
+
+        chatSocket.onclose = function (e) {
+            console.error('Chat socket closed unexpectedly');
+        };
+
+        document.querySelector('#chat-message-input').focus();
+        document.querySelector('#chat-message-input').onkeyup = function (e) {
+            if (e.keyCode === 13) {  // enter, return
+                document.querySelector('#chat-message-submit').click();
+            }
+        };
+
+        document.querySelector('#chat-message-submit').onclick = function (e) {
+            const messageInputDom = document.querySelector('#chat-message-input');
+            const message = messageInputDom.value;
+            chatSocket.send(JSON.stringify({
+                'type': "text_message",
+                "author": `{{request.user}}`,
+                'message': message
+            }));
+            messageInputDom.value = '';
+        };
+    </script>
+{% endblock script %}
